--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .container {
+    opacity: 1;
     background-color:rgba(223, 241, 223, 0.7);
     display: flex;
     flex-direction: column;
